/cp 2008-07-09  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/36760
	* pt.c (tsubst_function_type): Don't warn for type qualifiers
	on function return type in case of system header.

/testsuite
2008-07-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/36760
	* g++.dg/warn/pragma-system_header5.C: New.
	* g++.dg/warn/pragma-system_header5.h: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137660 138bc75d-0d04-0410-961f-82ee72b054a4